add models, remoute & locale data source

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,8 @@ dependencies:
   build_runner: ^2.4.8
   json_serializable: ^6.7.1
   json_annotation: ^4.8.1
-
+  http: ^1.2.1
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
