--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   json_annotation: ^4.8.1
   http: ^1.2.1
   shared_preferences: ^2.2.2
+  internet_connection_checker: ^1.0.0+1
+  flutter_bloc: ^8.1.4
 
 dev_dependencies:
   flutter_test:
