--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,9 +32,8 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/noimage.jpg
   # fonts:
   #   - family: Schyler
   #     fonts:
